y.output

state 0
	$accept: .Main $end 
	Program: .    (2)

	.  reduce 2 (src line 34)

	Program  goto 2
	Main  goto 1

state 1
	$accept:  Main.$end 

	$end  accept
	.  error


state 2
	Main:  Program.    (1)
	Program:  Program.Var ';' 
	Program:  Program.Val ';' 

	ident  shift 7
	bool_  shift 25
	int_  shift 23
	float  shift 24
	'('  shift 13
	'['  shift 28
	'{'  shift 26
	'\''  shift 20
	'"'  shift 21
	'`'  shift 22
	'-'  shift 19
	'!'  shift 18
	'>'  shift 16
	'<'  shift 14
	lte  shift 15
	gte  shift 17
	.  reduce 1 (src line 32)

	Var  goto 3
	Val  goto 4
	CallBody  goto 6
	Atom  goto 8
	Ident  goto 5
	Expr  goto 9
	Literal  goto 10
	List  goto 12
	ListItem  goto 29
	Map  goto 11
	MapField  goto 27

state 3
	Program:  Program Var.';' 

	';'  shift 30
	.  error


state 4
	Program:  Program Val.';' 
	Val:  Val.'>' CallBody 

	';'  shift 31
	'>'  shift 32
	.  error


state 5
	Var:  Ident.'=' Val 
	Literal:  Ident.    (28)

	'='  shift 33
	.  reduce 28 (src line 77)


state 6
	Val:  CallBody.    (7)
	CallBody:  CallBody.Atom 

	ident  shift 7
	bool_  shift 25
	int_  shift 23
	float  shift 24
	'('  shift 13
	'['  shift 28
	'{'  shift 26
	'\''  shift 20
	'"'  shift 21
	'`'  shift 22
	'-'  shift 19
	'!'  shift 18
	'<'  shift 14
	lte  shift 15
	gte  shift 17
	.  reduce 7 (src line 46)

	Atom  goto 34
	Ident  goto 35
	Expr  goto 9
	Literal  goto 10
	List  goto 12
	ListItem  goto 29
	Map  goto 11
	MapField  goto 27

state 7
	Ident:  ident.    (5)

	.  reduce 5 (src line 40)


state 8
	CallBody:  Atom.    (9)

	.  reduce 9 (src line 51)


state 9
	Atom:  Expr.    (11)
	Expr:  Expr.'/' Expr 
	Expr:  Expr.'*' Expr 
	Expr:  Expr.'-' Expr 
	Expr:  Expr.'+' Expr 
	Expr:  Expr.'&' Expr 
	Expr:  Expr.'|' Expr 

	'|'  shift 41
	'&'  shift 40
	'+'  shift 39
	'/'  shift 36
	'*'  shift 37
	.  reduce 11 (src line 56)


state 10
	Expr:  Literal.    (12)

	.  reduce 12 (src line 58)


state 11
	Expr:  Map.    (13)

	.  reduce 13 (src line 59)


state 12
	Expr:  List.    (14)

	.  reduce 14 (src line 59)


state 13
	Expr:  '('.Expr ')' 

	ident  shift 7
	bool_  shift 25
	int_  shift 23
	float  shift 24
	'('  shift 13
	'['  shift 28
	'{'  shift 26
	'\''  shift 20
	'"'  shift 21
	'`'  shift 22
	'-'  shift 19
	'!'  shift 18
	'>'  shift 16
	'<'  shift 14
	lte  shift 15
	gte  shift 17
	.  error

	Ident  goto 35
	Expr  goto 42
	Literal  goto 10
	List  goto 12
	ListItem  goto 29
	Map  goto 11
	MapField  goto 27

state 14
	Expr:  '<'.Expr 

	ident  shift 7
	bool_  shift 25
	int_  shift 23
	float  shift 24
	'('  shift 13
	'['  shift 28
	'{'  shift 26
	'\''  shift 20
	'"'  shift 21
	'`'  shift 22
	'-'  shift 19
	'!'  shift 18
	'>'  shift 16
	'<'  shift 14
	lte  shift 15
	gte  shift 17
	.  error

	Ident  goto 35
	Expr  goto 43
	Literal  goto 10
	List  goto 12
	ListItem  goto 29
	Map  goto 11
	MapField  goto 27

state 15
	Expr:  lte.Expr 

	ident  shift 7
	bool_  shift 25
	int_  shift 23
	float  shift 24
	'('  shift 13
	'['  shift 28
	'{'  shift 26
	'\''  shift 20
	'"'  shift 21
	'`'  shift 22
	'-'  shift 19
	'!'  shift 18
	'>'  shift 16
	'<'  shift 14
	lte  shift 15
	gte  shift 17
	.  error

	Ident  goto 35
	Expr  goto 44
	Literal  goto 10
	List  goto 12
	ListItem  goto 29
	Map  goto 11
	MapField  goto 27

state 16
	Expr:  '>'.Expr 

	ident  shift 7
	bool_  shift 25
	int_  shift 23
	float  shift 24
	'('  shift 13
	'['  shift 28
	'{'  shift 26
	'\''  shift 20
	'"'  shift 21
	'`'  shift 22
	'-'  shift 19
	'!'  shift 18
	'>'  shift 16
	'<'  shift 14
	lte  shift 15
	gte  shift 17
	.  error

	Ident  goto 35
	Expr  goto 45
	Literal  goto 10
	List  goto 12
	ListItem  goto 29
	Map  goto 11
	MapField  goto 27

state 17
	Expr:  gte.Expr 

	ident  shift 7
	bool_  shift 25
	int_  shift 23
	float  shift 24
	'('  shift 13
	'['  shift 28
	'{'  shift 26
	'\''  shift 20
	'"'  shift 21
	'`'  shift 22
	'-'  shift 19
	'!'  shift 18
	'>'  shift 16
	'<'  shift 14
	lte  shift 15
	gte  shift 17
	.  error

	Ident  goto 35
	Expr  goto 46
	Literal  goto 10
	List  goto 12
	ListItem  goto 29
	Map  goto 11
	MapField  goto 27

state 18
	Expr:  '!'.Expr 

	ident  shift 7
	bool_  shift 25
	int_  shift 23
	float  shift 24
	'('  shift 13
	'['  shift 28
	'{'  shift 26
	'\''  shift 20
	'"'  shift 21
	'`'  shift 22
	'-'  shift 19
	'!'  shift 18
	'>'  shift 16
	'<'  shift 14
	lte  shift 15
	gte  shift 17
	.  error

	Ident  goto 35
	Expr  goto 47
	Literal  goto 10
	List  goto 12
	ListItem  goto 29
	Map  goto 11
	MapField  goto 27

state 19
	Expr:  '-'.Expr 

	ident  shift 7
	bool_  shift 25
	int_  shift 23
	float  shift 24
	'('  shift 13
	'['  shift 28
	'{'  shift 26
	'\''  shift 20
	'"'  shift 21
	'`'  shift 22
	'-'  shift 19
	'!'  shift 18
	'>'  shift 16
	'<'  shift 14
	lte  shift 15
	gte  shift 17
	.  error

	Ident  goto 35
	Expr  goto 48
	Literal  goto 10
	List  goto 12
	ListItem  goto 29
	Map  goto 11
	MapField  goto 27

state 20
	Literal:  '\''.String '\'' 
	String: .    (35)

	.  reduce 35 (src line 87)

	String  goto 49

state 21
	Literal:  '\"'.String '\"' 
	String: .    (35)

	.  reduce 35 (src line 87)

	String  goto 50

state 22
	Literal:  '`'.RawString '`' 
	RawString: .    (37)

	.  reduce 37 (src line 92)

	RawString  goto 51

state 23
	Literal:  int_.    (32)

	.  reduce 32 (src line 82)


state 24
	Literal:  float.    (33)

	.  reduce 33 (src line 83)


state 25
	Literal:  bool_.    (34)

	.  reduce 34 (src line 84)


state 26
	Map:  '{'.'}' 
	MapField:  '{'.Ident ':' Expr 

	ident  shift 7
	'}'  shift 52
	.  error

	Ident  goto 53

state 27
	Map:  MapField.'}' 
	MapField:  MapField.',' Ident ':' Expr 

	','  shift 55
	'}'  shift 54
	.  error


state 28
	List:  '['.']' 
	ListItem:  '['.Expr 

	ident  shift 7
	bool_  shift 25
	int_  shift 23
	float  shift 24
	'('  shift 13
	'['  shift 28
	']'  shift 56
	'{'  shift 26
	'\''  shift 20
	'"'  shift 21
	'`'  shift 22
	'-'  shift 19
	'!'  shift 18
	'>'  shift 16
	'<'  shift 14
	lte  shift 15
	gte  shift 17
	.  error

	Ident  goto 35
	Expr  goto 57
	Literal  goto 10
	List  goto 12
	ListItem  goto 29
	Map  goto 11
	MapField  goto 27

state 29
	List:  ListItem.']' 
	ListItem:  ListItem.',' Expr 

	','  shift 59
	']'  shift 58
	.  error


state 30
	Program:  Program Var ';'.    (3)

	.  reduce 3 (src line 36)


state 31
	Program:  Program Val ';'.    (4)

	.  reduce 4 (src line 37)


state 32
	Val:  Val '>'.CallBody 

	ident  shift 7
	bool_  shift 25
	int_  shift 23
	float  shift 24
	'('  shift 13
	'['  shift 28
	'{'  shift 26
	'\''  shift 20
	'"'  shift 21
	'`'  shift 22
	'-'  shift 19
	'!'  shift 18
	'>'  shift 16
	'<'  shift 14
	lte  shift 15
	gte  shift 17
	.  error

	CallBody  goto 60
	Atom  goto 8
	Ident  goto 35
	Expr  goto 9
	Literal  goto 10
	List  goto 12
	ListItem  goto 29
	Map  goto 11
	MapField  goto 27

state 33
	Var:  Ident '='.Val 

	ident  shift 7
	bool_  shift 25
	int_  shift 23
	float  shift 24
	'('  shift 13
	'['  shift 28
	'{'  shift 26
	'\''  shift 20
	'"'  shift 21
	'`'  shift 22
	'-'  shift 19
	'!'  shift 18
	'>'  shift 16
	'<'  shift 14
	lte  shift 15
	gte  shift 17
	.  error

	Val  goto 61
	CallBody  goto 6
	Atom  goto 8
	Ident  goto 35
	Expr  goto 9
	Literal  goto 10
	List  goto 12
	ListItem  goto 29
	Map  goto 11
	MapField  goto 27

state 34
	CallBody:  CallBody Atom.    (10)

	.  reduce 10 (src line 53)


state 35
	Literal:  Ident.    (28)

	.  reduce 28 (src line 77)


state 36
	Expr:  Expr '/'.Expr 

	ident  shift 7
	bool_  shift 25
	int_  shift 23
	float  shift 24
	'('  shift 13
	'['  shift 28
	'{'  shift 26
	'\''  shift 20
	'"'  shift 21
	'`'  shift 22
	'-'  shift 19
	'!'  shift 18
	'>'  shift 16
	'<'  shift 14
	lte  shift 15
	gte  shift 17
	.  error

	Ident  goto 35
	Expr  goto 62
	Literal  goto 10
	List  goto 12
	ListItem  goto 29
	Map  goto 11
	MapField  goto 27

state 37
	Expr:  Expr '*'.Expr 

	ident  shift 7
	bool_  shift 25
	int_  shift 23
	float  shift 24
	'('  shift 13
	'['  shift 28
	'{'  shift 26
	'\''  shift 20
	'"'  shift 21
	'`'  shift 22
	'-'  shift 19
	'!'  shift 18
	'>'  shift 16
	'<'  shift 14
	lte  shift 15
	gte  shift 17
	.  error

	Ident  goto 35
	Expr  goto 63
	Literal  goto 10
	List  goto 12
	ListItem  goto 29
	Map  goto 11
	MapField  goto 27

state 38
	Expr:  Expr '-'.Expr 

	ident  shift 7
	bool_  shift 25
	int_  shift 23
	float  shift 24
	'('  shift 13
	'['  shift 28
	'{'  shift 26
	'\''  shift 20
	'"'  shift 21
	'`'  shift 22
	'-'  shift 19
	'!'  shift 18
	'>'  shift 16
	'<'  shift 14
	lte  shift 15
	gte  shift 17
	.  error

	Ident  goto 35
	Expr  goto 64
	Literal  goto 10
	List  goto 12
	ListItem  goto 29
	Map  goto 11
	MapField  goto 27

state 39
	Expr:  Expr '+'.Expr 

	ident  shift 7
	bool_  shift 25
	int_  shift 23
	float  shift 24
	'('  shift 13
	'['  shift 28
	'{'  shift 26
	'\''  shift 20
	'"'  shift 21
	'`'  shift 22
	'-'  shift 19
	'!'  shift 18
	'>'  shift 16
	'<'  shift 14
	lte  shift 15
	gte  shift 17
	.  error

	Ident  goto 35
	Expr  goto 65
	Literal  goto 10
	List  goto 12
	ListItem  goto 29
	Map  goto 11
	MapField  goto 27

state 40
	Expr:  Expr '&'.Expr 

	ident  shift 7
	bool_  shift 25
	int_  shift 23
	float  shift 24
	'('  shift 13
	'['  shift 28
	'{'  shift 26
	'\''  shift 20
	'"'  shift 21
	'`'  shift 22
	'-'  shift 19
	'!'  shift 18
	'>'  shift 16
	'<'  shift 14
	lte  shift 15
	gte  shift 17
	.  error

	Ident  goto 35
	Expr  goto 66
	Literal  goto 10
	List  goto 12
	ListItem  goto 29
	Map  goto 11
	MapField  goto 27

state 41
	Expr:  Expr '|'.Expr 

	ident  shift 7
	bool_  shift 25
	int_  shift 23
	float  shift 24
	'('  shift 13
	'['  shift 28
	'{'  shift 26
	'\''  shift 20
	'"'  shift 21
	'`'  shift 22
	'-'  shift 19
	'!'  shift 18
	'>'  shift 16
	'<'  shift 14
	lte  shift 15
	gte  shift 17
	.  error

	Ident  goto 35
	Expr  goto 67
	Literal  goto 10
	List  goto 12
	ListItem  goto 29
	Map  goto 11
	MapField  goto 27

state 42
	Expr:  '(' Expr.')' 
	Expr:  Expr.'/' Expr 
	Expr:  Expr.'*' Expr 
	Expr:  Expr.'-' Expr 
	Expr:  Expr.'+' Expr 
	Expr:  Expr.'&' Expr 
	Expr:  Expr.'|' Expr 

	')'  shift 68
	'|'  shift 41
	'&'  shift 40
	'+'  shift 39
	'-'  shift 38
	'/'  shift 36
	'*'  shift 37
	.  error


state 43
	Expr:  Expr.'/' Expr 
	Expr:  Expr.'*' Expr 
	Expr:  Expr.'-' Expr 
	Expr:  Expr.'+' Expr 
	Expr:  Expr.'&' Expr 
	Expr:  Expr.'|' Expr 
	Expr:  '<' Expr.    (22)

	.  reduce 22 (src line 69)


state 44
	Expr:  Expr.'/' Expr 
	Expr:  Expr.'*' Expr 
	Expr:  Expr.'-' Expr 
	Expr:  Expr.'+' Expr 
	Expr:  Expr.'&' Expr 
	Expr:  Expr.'|' Expr 
	Expr:  lte Expr.    (23)

	.  reduce 23 (src line 70)


state 45
	Expr:  Expr.'/' Expr 
	Expr:  Expr.'*' Expr 
	Expr:  Expr.'-' Expr 
	Expr:  Expr.'+' Expr 
	Expr:  Expr.'&' Expr 
	Expr:  Expr.'|' Expr 
	Expr:  '>' Expr.    (24)

	.  reduce 24 (src line 71)


state 46
	Expr:  Expr.'/' Expr 
	Expr:  Expr.'*' Expr 
	Expr:  Expr.'-' Expr 
	Expr:  Expr.'+' Expr 
	Expr:  Expr.'&' Expr 
	Expr:  Expr.'|' Expr 
	Expr:  gte Expr.    (25)

	.  reduce 25 (src line 72)


state 47
	Expr:  Expr.'/' Expr 
	Expr:  Expr.'*' Expr 
	Expr:  Expr.'-' Expr 
	Expr:  Expr.'+' Expr 
	Expr:  Expr.'&' Expr 
	Expr:  Expr.'|' Expr 
	Expr:  '!' Expr.    (26)

	.  reduce 26 (src line 73)


state 48
	Expr:  Expr.'/' Expr 
	Expr:  Expr.'*' Expr 
	Expr:  Expr.'-' Expr 
	Expr:  Expr.'+' Expr 
	Expr:  Expr.'&' Expr 
	Expr:  Expr.'|' Expr 
	Expr:  '-' Expr.    (27)

	.  reduce 27 (src line 74)


state 49
	Literal:  '\'' String.'\'' 
	String:  String.text 

	text  shift 70
	'\''  shift 69
	.  error


state 50
	Literal:  '\"' String.'\"' 
	String:  String.text 

	text  shift 70
	'"'  shift 71
	.  error


state 51
	Literal:  '`' RawString.'`' 
	RawString:  RawString.text 
	RawString:  RawString.interp Expr '}' 

	interp  shift 74
	text  shift 73
	'`'  shift 72
	.  error


state 52
	Map:  '{' '}'.    (44)

	.  reduce 44 (src line 108)


state 53
	MapField:  '{' Ident.':' Expr 

	':'  shift 75
	.  error


state 54
	Map:  MapField '}'.    (45)

	.  reduce 45 (src line 110)


state 55
	MapField:  MapField ','.Ident ':' Expr 

	ident  shift 7
	.  error

	Ident  goto 76

state 56
	List:  '[' ']'.    (40)

	.  reduce 40 (src line 98)


state 57
	Expr:  Expr.'/' Expr 
	Expr:  Expr.'*' Expr 
	Expr:  Expr.'-' Expr 
	Expr:  Expr.'+' Expr 
	Expr:  Expr.'&' Expr 
	Expr:  Expr.'|' Expr 
	ListItem:  '[' Expr.    (42)

	'|'  shift 41
	'&'  shift 40
	'+'  shift 39
	'-'  shift 38
	'/'  shift 36
	'*'  shift 37
	.  reduce 42 (src line 103)


state 58
	List:  ListItem ']'.    (41)

	.  reduce 41 (src line 100)


state 59
	ListItem:  ListItem ','.Expr 

	ident  shift 7
	bool_  shift 25
	int_  shift 23
	float  shift 24
	'('  shift 13
	'['  shift 28
	'{'  shift 26
	'\''  shift 20
	'"'  shift 21
	'`'  shift 22
	'-'  shift 19
	'!'  shift 18
	'>'  shift 16
	'<'  shift 14
	lte  shift 15
	gte  shift 17
	.  error

	Ident  goto 35
	Expr  goto 77
	Literal  goto 10
	List  goto 12
	ListItem  goto 29
	Map  goto 11
	MapField  goto 27

state 60
	Val:  Val '>' CallBody.    (8)
	CallBody:  CallBody.Atom 

	ident  shift 7
	bool_  shift 25
	int_  shift 23
	float  shift 24
	'('  shift 13
	'['  shift 28
	'{'  shift 26
	'\''  shift 20
	'"'  shift 21
	'`'  shift 22
	'-'  shift 19
	'!'  shift 18
	'<'  shift 14
	lte  shift 15
	gte  shift 17
	.  reduce 8 (src line 48)

	Atom  goto 34
	Ident  goto 35
	Expr  goto 9
	Literal  goto 10
	List  goto 12
	ListItem  goto 29
	Map  goto 11
	MapField  goto 27

state 61
	Var:  Ident '=' Val.    (6)
	Val:  Val.'>' CallBody 

	'>'  shift 32
	.  reduce 6 (src line 42)


state 62
	Expr:  Expr.'/' Expr 
	Expr:  Expr '/' Expr.    (16)
	Expr:  Expr.'*' Expr 
	Expr:  Expr.'-' Expr 
	Expr:  Expr.'+' Expr 
	Expr:  Expr.'&' Expr 
	Expr:  Expr.'|' Expr 

	.  reduce 16 (src line 62)


state 63
	Expr:  Expr.'/' Expr 
	Expr:  Expr.'*' Expr 
	Expr:  Expr '*' Expr.    (17)
	Expr:  Expr.'-' Expr 
	Expr:  Expr.'+' Expr 
	Expr:  Expr.'&' Expr 
	Expr:  Expr.'|' Expr 

	.  reduce 17 (src line 63)


state 64
	Expr:  Expr.'/' Expr 
	Expr:  Expr.'*' Expr 
	Expr:  Expr.'-' Expr 
	Expr:  Expr '-' Expr.    (18)
	Expr:  Expr.'+' Expr 
	Expr:  Expr.'&' Expr 
	Expr:  Expr.'|' Expr 

	'/'  shift 36
	'*'  shift 37
	.  reduce 18 (src line 64)


state 65
	Expr:  Expr.'/' Expr 
	Expr:  Expr.'*' Expr 
	Expr:  Expr.'-' Expr 
	Expr:  Expr.'+' Expr 
	Expr:  Expr '+' Expr.    (19)
	Expr:  Expr.'&' Expr 
	Expr:  Expr.'|' Expr 

	'/'  shift 36
	'*'  shift 37
	.  reduce 19 (src line 65)


state 66
	Expr:  Expr.'/' Expr 
	Expr:  Expr.'*' Expr 
	Expr:  Expr.'-' Expr 
	Expr:  Expr.'+' Expr 
	Expr:  Expr.'&' Expr 
	Expr:  Expr '&' Expr.    (20)
	Expr:  Expr.'|' Expr 

	'+'  shift 39
	'-'  shift 38
	'/'  shift 36
	'*'  shift 37
	.  reduce 20 (src line 66)


state 67
	Expr:  Expr.'/' Expr 
	Expr:  Expr.'*' Expr 
	Expr:  Expr.'-' Expr 
	Expr:  Expr.'+' Expr 
	Expr:  Expr.'&' Expr 
	Expr:  Expr.'|' Expr 
	Expr:  Expr '|' Expr.    (21)

	'+'  shift 39
	'-'  shift 38
	'/'  shift 36
	'*'  shift 37
	.  reduce 21 (src line 67)


state 68
	Expr:  '(' Expr ')'.    (15)

	.  reduce 15 (src line 60)


state 69
	Literal:  '\'' String '\''.    (29)

	.  reduce 29 (src line 79)


state 70
	String:  String text.    (36)

	.  reduce 36 (src line 89)


state 71
	Literal:  '\"' String '\"'.    (30)

	.  reduce 30 (src line 80)


state 72
	Literal:  '`' RawString '`'.    (31)

	.  reduce 31 (src line 81)


state 73
	RawString:  RawString text.    (38)

	.  reduce 38 (src line 94)


state 74
	RawString:  RawString interp.Expr '}' 

	ident  shift 7
	bool_  shift 25
	int_  shift 23
	float  shift 24
	'('  shift 13
	'['  shift 28
	'{'  shift 26
	'\''  shift 20
	'"'  shift 21
	'`'  shift 22
	'-'  shift 19
	'!'  shift 18
	'>'  shift 16
	'<'  shift 14
	lte  shift 15
	gte  shift 17
	.  error

	Ident  goto 35
	Expr  goto 78
	Literal  goto 10
	List  goto 12
	ListItem  goto 29
	Map  goto 11
	MapField  goto 27

state 75
	MapField:  '{' Ident ':'.Expr 

	ident  shift 7
	bool_  shift 25
	int_  shift 23
	float  shift 24
	'('  shift 13
	'['  shift 28
	'{'  shift 26
	'\''  shift 20
	'"'  shift 21
	'`'  shift 22
	'-'  shift 19
	'!'  shift 18
	'>'  shift 16
	'<'  shift 14
	lte  shift 15
	gte  shift 17
	.  error

	Ident  goto 35
	Expr  goto 79
	Literal  goto 10
	List  goto 12
	ListItem  goto 29
	Map  goto 11
	MapField  goto 27

state 76
	MapField:  MapField ',' Ident.':' Expr 

	':'  shift 80
	.  error


state 77
	Expr:  Expr.'/' Expr 
	Expr:  Expr.'*' Expr 
	Expr:  Expr.'-' Expr 
	Expr:  Expr.'+' Expr 
	Expr:  Expr.'&' Expr 
	Expr:  Expr.'|' Expr 
	ListItem:  ListItem ',' Expr.    (43)

	'|'  shift 41
	'&'  shift 40
	'+'  shift 39
	'-'  shift 38
	'/'  shift 36
	'*'  shift 37
	.  reduce 43 (src line 105)


state 78
	Expr:  Expr.'/' Expr 
	Expr:  Expr.'*' Expr 
	Expr:  Expr.'-' Expr 
	Expr:  Expr.'+' Expr 
	Expr:  Expr.'&' Expr 
	Expr:  Expr.'|' Expr 
	RawString:  RawString interp Expr.'}' 

	'}'  shift 81
	'|'  shift 41
	'&'  shift 40
	'+'  shift 39
	'-'  shift 38
	'/'  shift 36
	'*'  shift 37
	.  error


state 79
	Expr:  Expr.'/' Expr 
	Expr:  Expr.'*' Expr 
	Expr:  Expr.'-' Expr 
	Expr:  Expr.'+' Expr 
	Expr:  Expr.'&' Expr 
	Expr:  Expr.'|' Expr 
	MapField:  '{' Ident ':' Expr.    (46)

	'|'  shift 41
	'&'  shift 40
	'+'  shift 39
	'-'  shift 38
	'/'  shift 36
	'*'  shift 37
	.  reduce 46 (src line 113)


state 80
	MapField:  MapField ',' Ident ':'.Expr 

	ident  shift 7
	bool_  shift 25
	int_  shift 23
	float  shift 24
	'('  shift 13
	'['  shift 28
	'{'  shift 26
	'\''  shift 20
	'"'  shift 21
	'`'  shift 22
	'-'  shift 19
	'!'  shift 18
	'>'  shift 16
	'<'  shift 14
	lte  shift 15
	gte  shift 17
	.  error

	Ident  goto 35
	Expr  goto 82
	Literal  goto 10
	List  goto 12
	ListItem  goto 29
	Map  goto 11
	MapField  goto 27

state 81
	RawString:  RawString interp Expr '}'.    (39)

	.  reduce 39 (src line 95)


state 82
	Expr:  Expr.'/' Expr 
	Expr:  Expr.'*' Expr 
	Expr:  Expr.'-' Expr 
	Expr:  Expr.'+' Expr 
	Expr:  Expr.'&' Expr 
	Expr:  Expr.'|' Expr 
	MapField:  MapField ',' Ident ':' Expr.    (47)

	'|'  shift 41
	'&'  shift 40
	'+'  shift 39
	'-'  shift 38
	'/'  shift 36
	'*'  shift 37
	.  reduce 47 (src line 115)


37 terminals, 16 nonterminals
48 grammar rules, 83/8000 states
0 shift/reduce, 0 reduce/reduce conflicts reported
65 working sets used
memory: parser 209/120000
52 extra closures
443 shift entries, 1 exceptions
41 goto entries
138 entries saved by goto default
Optimizer space used: output 170/120000
170 table entries, 29 zero
maximum spread: 36, maximum offset: 80
